# quaver

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.claude/agents/: git-flow-manager.md
.claude/commands/: finish.md  flow-status.md  hotfix.md  release.md
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: Makefile  changelog.rst  conf.py  getting_started.rst  index.rst
docs/api/: backtest.rst  index.rst  strategies.rst  types.rst
docs/strategies/: breakout_consolidation.md  generate_figures.py  index.rst  mean_reversion.md  pullback_trend.md  regime_mean_reversion.md  reversial_support.md  vsa_stopping_volume.md
notebooks/: 01_indicators_showcase.ipynb  02_trading_costs.ipynb  03_exit_rules.ipynb  04_position_sizing.ipynb  05_all_strategies.ipynb  06_backtest_metrics.ipynb  example_backtest.ipynb
quaver/: __init__.py  types.py
quaver/backtest/: __init__.py  data.py  engine.py  multi_engine.py  portfolio.py  result.py  runner.py  sizing.py
quaver/strategies/: __init__.py  base.py  breakout_consolidation.py  indicators.py  mean_reversion.py  pairs_mean_reversion.py  pullback_trend.py  regime_mean_reversion.py  registry.py  reversal_support.py  vsa_stopping_volume.py
tests/: conftest.py  test_backtest_engine.py  test_backtest_portfolio.py  test_backtest_result.py  test_exit_rules.py  test_indicators.py  test_multi_asset_strategy.py  test_new_strategies.py  test_runner.py  test_sizing.py
